# empowering-flights-icp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/empowering_flights_dapp_backend/: Cargo.toml  empowering_flights_dapp_backend.did
src/empowering_flights_dapp_backend/abi/: efmockAbi.json
src/empowering_flights_dapp_backend/src/: eth_rpc.rs  lib.rs
src/empowering_flights_dapp_frontend/: package.json
src/empowering_flights_dapp_frontend/src/: App.jsx
src/empowering_flights_evm/: hardhat.config.ts  package-lock.json  package.json
src/empowering_flights_evm/contracts/: EFTemplate.sol
